# Sistema_Bioma

./: .env  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json  dialog.json
src-tauri/src/: config.rs  lib.rs  main copy.rs  main.rs  socket_listener.rs  utils.rs
src-tauri/src/controller/: download_controller.rs  formula_controller.rs  formula_parser_controller.rs  geral_controller.rs  inicio_controller.rs  login_controller.rs  mod.rs  notification_controller.rs  settings_controller.rs  tauri_print_commands_controller.rs  xlsx_controller.rs
src-tauri/src/controller/admin/: historico_controller.rs  mod.rs  setor_controller.rs  usuario_controller.rs
src-tauri/src/controller/chat/: chat_controller.rs  file_controller.rs  mod.rs
src-tauri/src/controller/components/: mod.rs  search_controller.rs
src-tauri/src/controller/frota/: abastecimento_controller.rs  frota_controller.rs  manutencao_controller.rs  mod.rs  motoristas_controller.rs  posto_controller.rs  veiculo_controller.rs  viagem_controller.rs
src-tauri/src/controller/geral/: analise_controller.rs  bi_financeiro_controller.rs  cadastrar_coleta_controller.rs  cadastrarcliente_controller.rs  calculo_controller.rs  categoria_controller.rs  consultor_controller.rs  etapa_controller.rs  forma_contato_controller.rs  grupo_controller.rs  identificacao_controller.rs  lab_terceirizado_controller.rs  legislacao_controller.rs  legislacao_parametro_controller.rs  matriz_controller.rs  metodologia_controller.rs  mod.rs  observacao_controller.rs  pacote_controller.rs  parametro_controller.rs  pg_controller.rs  (+10 more)
src-tauri/src/handlers/: mod.rs
src-tauri/src/model/: amostra_personalizavel.rs  analise.rs  api_response.rs  atendimento.rs  calculo.rs  categoria.rs  coleta.rs  common.rs  consultor.rs  dropdown_options.rs  estoque.rs  etapa.rs  fila_trabalho.rs  financeiro.rs  financeiro_bi.rs  fisico_quimico.rs  forma_contato.rs  fornecedor.rs  grupo.rs  historico.rs  identificacao.rs  insumo.rs  insumo_registro.rs  insumo_registro_2.rs  kanban_card.rs  lab_terceirizado.rs  legislacao.rs  legislacao_parametro.rs  mapa_resultado.rs  materia_prima.rs  materia_prima_options.rs  materia_prima_registro.rs  matriz.rs  metodologia.rs  microbiologia.rs  mod.rs  notification_task.rs  observacao.rs  pacote.rs  parametro.rs  (+16 more)
src-tauri/src/routes/: Router.tsx  route.tsx
(+358 files in other folders)
