[package]
name = "sistema_bioma"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sistema_bioma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# HTTP client com suporte a JSON
reqwest = { version = "0.12.20", features = ["json"] }

# Runtime assíncrono com macros (para async/await)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Framework Tauri versão 2
tauri = { version = "2", features = [] }

# Plugin opcional para abrir arquivos/URLs
tauri-plugin-opener = "2"

# Serialização e desserialização com derive
serde = { version = "1", features = ["derive"] }

# Suporte a valores JSON
serde_json = "1"

# Tratamento de erros simplificado
anyhow = "1"

once_cell = "1"

