[package]
name = "sistema_bioma"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sistema_bioma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
# HTTP client com suporte a JSON
reqwest = { version = "0.12.22", features = ["json"] }

# Runtime assíncrono com macros (para async/await)
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }

# Framework Tauri versão 2
tauri = { version = "2.6.2", features = [] }

# Plugin opcional para abrir arquivos/URLs
tauri-plugin-opener = "2"

# Serialização e desserialização com derive
serde = { version = "1", features = ["derive"] }

# Suporte a valores JSON
serde_json = "1"

# Tratamento de erros simplificado
anyhow = "1"

once_cell = "1"

dotenvy = "0.15.7"

chrono = { version = "0.4.41", features = ["serde"] }

bigdecimal = { version = "0.4.8", features = ["serde"] } 

uuid = { version = "1.17.0", features = ["v4", "serde"] } # Adicione esta linha

base64 = "0.22.1"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] } # Use appropriate runtime and database features

tokio-tungstenite = "0.27.0"

futures-util = "0.3.31"

url = "2.5.4"

lazy_static = "1.4" 

dirs = "6.0.0"
notify-rust = "4.11.7" # Para notificações (opcional)

# Se você estiver usando tauri-plugin-dialog e tauri-plugin-fs
tauri-plugin-dialog = "2.3.1"
tauri-plugin-fs = "2.4.0"

calamine = "0.29.0"


